Update email address

--- a/Help/windows.htm
+++ b/Help/windows.htm
@@ -7,7 +7,7 @@
 <h1>This Windows port of AGiliTy</h1>
 This Windows port of AGiliTy was written by David Kinder.<br>
 Web: <a href="http://www.davidkinder.co.uk/">http://www.davidkinder.co.uk/</a><br>
-Email: <a href="mailto:davidk.kinder@virgin.net">davidk.kinder@virgin.net</a><br>
+Email: <a href="mailto:davidk@davidkinder.co.uk">davidk@davidkinder.co.uk</a><br>
 <p>
 AGiliTy supports input line editing and history to make typing more convenient. All the common editing keys work as you would
 expect. Cursor up and cursor down step up and down through the input history, respectively. Text can be pasted into the input
