Windows 10 DPI support

--- a/Help/supported.htm
+++ b/Help/supported.htm
@@ -5,7 +5,7 @@
  </head>
  <body>
 <h1>AGT Versions Supported</h1>
-AGiliTy understands the following versions of AGT (which includes every AGT game at ftp.ifarchive.org that I know of):
+AGiliTy understands the following versions of AGT (which includes every AGT game at www.ifarchive.org that I know of):
 <ul>
 <li>1.0
 <li>1.18
