Remove or update out-of-date links

--- a/Help/acknowledgements.htm
+++ b/Help/acknowledgements.htm
@@ -13,7 +13,7 @@ Thanks to the following people:
 <li>Mitch Mlinar, who has contributed several patches.
 <li>Jan-Erik Karlsson, for his bug report/patch.
 <li>Everyone else who has sent me suggestions and bug reports, including Audrey De Lisle (responsible for the red smoke), David Doherty, Al Golden, John Hartnup, Walter Isaac, Sami Kivela, Alexander Lehmann, Grant E. Metcalf, Paul Mikell , Adam Myrow, Olav Nielsen, D.J. Picton, Kevin Soucy, Ben Straub, "Grand Moff Tarkin", Adam Thornton, Mark Tilford, David Turpin and Gil Williamson.
-<li>Volker Blasius, maintainer of the Interactive Fiction Archive at ftp.ifarchive.org.
+<li>Volker Blasius, maintainer of the Interactive Fiction Archive at www.ifarchive.org.
 <li>Robert Pelak, who suggested the name "AGiliTy".
 <li>All of the other people on rai-f who suggested names for my interpreter.
 </ul>
