Add description of current authorship status (i.e. Robert long gone)

--- a/Help/introduction.htm
+++ b/Help/introduction.htm
@@ -7,7 +7,7 @@
 <h1>AGiliTy: The (mostly) universal AGT interpreter</h1>
 <h2>Version 1.1.2<br>
 Written by Robert Masenten<br>
-Windows version by David Kinder</h2>
+Updates and Windows version by David Kinder</h2>
 
 This is an interpreter for game files created with Malmberg and Welch's <b>Adventure Game Toolkit</b>. AGiliTy is universal in the sense
 that it understands and interprets most of the many versions of the AGT game file format (unlike the original interpreters which
