--- a/Help/windows.htm
+++ b/Help/windows.htm
@@ -8,6 +8,11 @@
 This Windows port of AGiliTy was written by David Kinder.<br>
 Web: <a href="http://www.davidkinder.co.uk/">http://www.davidkinder.co.uk/</a><br>
 Email: <a href="mailto:davidk@davidkinder.co.uk">davidk@davidkinder.co.uk</a><br>
+
+<p>The original author, Robert Masenten, has not been heard from in years, but David Kinder has done some work on updating
+AGiliTy to fix bugs. Any bugs you find can be reported at David's GitHub page for AGiliTy:<br>
+<a href="microsoft-edge:https://github.com/DavidKinder/Windows-AGiliTy/">https://github.com/DavidKinder/Windows-AGiliTy/</a><br>
+
 <p>
 AGiliTy supports input line editing and history to make typing more convenient. All the common editing keys work as you would
 expect. Cursor up and cursor down step up and down through the input history, respectively. Text can be pasted into the input
