Update ifarchive.org URLs to current format

--- a/Help/games.htm
+++ b/Help/games.htm
@@ -6,11 +6,11 @@
  <body>
 <h1>AGT Game List</h1>
 Here is a list of a few of the better or more popular AGT games, along with their filename in<br>
-<a href="http://www.ifarchive.org/indexes/if-archiveXgamesXagt.html">http://www.ifarchive.org/indexes/if-archiveXgamesXagt.html</a><br>
+<a href="https://www.ifarchive.org/indexes/if-archive/games/agt/">https://www.ifarchive.org/indexes/if-archive/games/agt/</a><br>
 <p>
 I've also included references to reviews in issues of SPAG and XYZZYnews; these can be found in<br>
-<a href="http://www.ifarchive.org/indexes/if-archiveXmagazinesXSPAG.html">http://www.ifarchive.org/indexes/if-archiveXmagazinesXSPAG.html</a> and<br>
-<a href="http://www.ifarchive.org/indexes/if-archiveXmagazinesXXYZZYnews.html">http://www.ifarchive.org/indexes/if-archiveXmagazinesXXYZZYnews.html</a> respectively.
+<a href="https://www.ifarchive.org/indexes/if-archive/magazines/SPAG/">https://www.ifarchive.org/indexes/if-archive/magazines/SPAG/</a> and<br>
+<a href="https://www.ifarchive.org/indexes/if-archive/magazines/XYZZYnews/">https://www.ifarchive.org/indexes/if-archive/magazines/XYZZYnews/</a> respectively.
 <p>
 <b>Shades of Gray</b> (soggy97.zip) by Mark Baker, Steve Bauman, Belisana Magnificent, Mike Laskey, Judith Pintar,
 "Hercules", and Cindy Yans<br>
