--- a/Help/introduction.htm
+++ b/Help/introduction.htm
@@ -18,7 +18,7 @@ It is <b>not</b> a port of the original interpreters but rather a completely new
 follows the original interpreters on most things, there are some differences which are described below.
 <p>
 The most recent release of this program can be found at the Interactive Fiction archive:<br>
-<a href="http://www.ifarchive.org/indexes/if-archiveXprogrammingXagtXagility.html">http://www.ifarchive.org/indexes/if-archiveXprogrammingXagtXagility.html</a>
+<a href="https://www.ifarchive.org/indexes/if-archive/programming/agt/agility/">https://www.ifarchive.org/indexes/if-archive/programming/agt/agility/</a>
 <p>
 This software is copyright 1996-1999,2001 by Robert Masenten. This program is free software; you can redistribute it and/or modify it
 under the terms of version 2 of the GNU General Public License, as published by the Free Software Foundation.
