--- a/Help/files.htm
+++ b/Help/files.htm
@@ -6,7 +6,7 @@
  <body>
 <h1>AGT and AGX Game Files</h1>
 Games in the AGT format can be found at the Interactive Fiction archive:<br>
-<a href="http://www.ifarchive.org/indexes/if-archiveXgamesXagt.html">http://www.ifarchive.org/indexes/if-archiveXgamesXagt.html</a>
+<a href="https://www.ifarchive.org/indexes/if-archive/games/agt/">https://www.ifarchive.org/indexes/if-archive/games/agt/</a>
 <p>
 AGT games are recognizable by having several different files with names like 'MYGAME.D$$', 'MYGAME.DA1', 'MYGAME.DA2', ... ,
 'MYGAME.DA6', 'MYGAME.TTL', etc. They also usually come with a DOS runtime interpreter (usually called RUN.EXE or MRUN.EXE),
@@ -15,7 +15,7 @@ which can be deleted without affecting AGiliTy.
 AGiliTy also has its own file format (with extension "AGX", which stands for "Adventure Game eXecutable"); existing AGT games
 can be converted into this format using the utility agt2agx which comes with AGiliTy. They can also be created from AGT source
 code by using the Magx compiler, available from<br>
-<a href="http://www.ifarchive.org/indexes/if-archiveXprogrammingXagtXmagx.html">http://www.ifarchive.org/indexes/if-archiveXprogrammingXagtXmagx.html</a>
+<a href="https://www.ifarchive.org/indexes/if-archive/programming/agt/magx/">https://www.ifarchive.org/indexes/if-archive/programming/agt/magx/</a>
 <p>
 The new format takes all of the various AGT files (MYGAME.DA1, MYGAME.DA2, MYGAME.DA3, MYGAME.DA4, MYGAME.DA5, MYGAME.DA6,
 MYGAME.TTL, MYGAME.INS, MYGAME.VOC, MYGAME.D$$, MYGAME.OPT, and parts of MYGAME.CFG) and puts all of the data in one file (MYGAME.AGX).
